src/objects/FS_OpportunityStages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used in apex coding to get opportunity stage names.</description>
    <fields>
        <fullName>FS_Stage_Closed__c</fullName>
        <description>It is used to store opportunity stage &apos;06-Closed&apos;</description>
        <label>FS_Stage_Closed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Stage_Commitment__c</fullName>
        <description>It is used  to store opportunity stage &apos;04-Verbal Commitment&apos;</description>
        <label>FS_Stage_Commitment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Stage_Proposal__c</fullName>
        <description>It is used to store opportunity stage name &apos;03-Proposal&apos;</description>
        <label>FS_Stage_Proposal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Stage_Prospecting__c</fullName>
        <description>If is used to store opportunity stage name &apos;01-Prospecting&apos;</description>
        <label>FS_Stage_Prospecting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Stage_Won__c</fullName>
        <description>It is used to store Opportunity stage &apos;05-Won&apos;</description>
        <label>FS_Stage_Won</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>FS Opportunity Stages</label>
</CustomObject>